# cwsteer

./: .gitignore  README.md  justfile  pyproject.toml
docs/: EXTRACTION_PLAN.md
scripts/: smoke.py
src/cwsteer/: __init__.py  adapter.py  bake.py  c_scan.py  dialogue.py  history.py  pairs.py  pool_validated.json  train.py
